--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <h1>Hello, i'm Cliffton Kapaga</h1>
         <p>Aspiring software developer | Data analyst | Mechanical Engineer | Automation Enthuatist</p>
     </section>
-    <script src="ssss.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
+
