--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en"
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my portifolio</title>
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -18,11 +18,12 @@
             </ul>
         </nav>
     </header>
-    <section id="home" class="hero">
-        <h1>Hello, i'm Cliffton Kapaga</h1>
-        <p>Aspiring software developer | Data analyst | Mechanical Engineer | Automation Enthuatist</p>
+        <section id="hero" class="hero">
+        <h1>Hello, You are Welcome.</h1><br>
+        <p><b>Do you want to know about me?</b></p>
     </section>
     <script src="script.js"></script>
 </body>
 </html>
+
 
