--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
         <section id="hero" class="hero">
         <h1>Hello, You are Welcome.</h1><br>
         <p><b>Do you want to know about me?</b></p>
-        <div class="cards-container"></div>
+        <div class="cards-container">
     </section>
     <script src="script.js"></script>
 </body>
 </html>
-
-
